# ipipeline

./: .gitignore  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: dist.yml  test.yml  tests.yml
ipipeline/: __init__.py  __main__.py  exception.py  exceptions.py
ipipeline/cli/: __init__.py  action.py  actions.py  argument.py  arguments.py  command.py  commands.py  execution.py  parsing.py
ipipeline/config/: __init__.py  constants.py  logging.json  reference.py
ipipeline/control/: __init__.py  building.py  catalog.py  execution.py  executors.py  sorting.py
ipipeline/execution/: __init__.py  building.py  executors.py  sorting.py
ipipeline/structure/: __init__.py  catalog.py  conn.py  info.py  link.py  node.py  pipeline.py  project.py  signal.py
ipipeline/util/: __init__.py  instance.py  system.py
ipipeline/utils/: __init__.py  checking.py  instance.py  record.py  sequence.py  system.py
requirement/: dev.txt
requirements/: dev.txt
test/cli/: test_action.py  test_argument.py  test_execution.py  test_parsing.py
test/control/: test_building.py  test_catalog.py  test_execution.py  test_sorting.py
test/structure/: test_node.py  test_pipeline.py
test/util/: test_instance.py
tests/: test_exception.py  test_exceptions.py  test_init.py  test_main.py
tests/cli/: test_action.py  test_actions.py  test_argument.py  test_arguments.py  test_command.py  test_commands.py  test_execution.py  test_parsing.py
tests/config/: test_constants.py  test_reference.py
tests/control/: test_building.py  test_catalog.py  (+3 more)
(+21 files in other folders)
